build-files/artic/1.11.1/README.md
# artic fieldbioinformatics container

Main tool : [artic](https://github.com/artic-network/fieldbioinformatics)

Full documentation: [https://github.com/artic-network/fieldbioinformatics](https://github.com/artic-network/fieldbioinformatics)

<details>

<summary>Additional tools installed via micromamba:</summary>

```
List of packages in environment: "/opt/conda/envs/artic"

  Name                       Version       Build                         Channel    
──────────────────────────────────────────────────────────────────────────────────────
  _openmp_mutex              4.5           7_kmp_llvm                    conda-forge
  _python_abi3_support       1.0           hd8ed1ab_3                    conda-forge
  align_trim                 1.2.0         pyhdfd78af_0                  bioconda   
  amply                      0.1.7         pyhd8ed1ab_0                  conda-forge
  annotated-types            0.7.0         pyhd8ed1ab_1                  conda-forge
  args                       0.1.0         pyhd8ed1ab_1004               conda-forge
  artic                      1.11.1        pyhdfd78af_0                  bioconda   
  attrs                      26.1.0        pyhcf101f3_0                  conda-forge
  aws-c-auth                 0.10.4        hb7a77c6_1                    conda-forge
  aws-c-cal                  0.9.14        h2aa3ae6_4                    conda-forge
  aws-c-common               0.14.2        hb03c661_0                    conda-forge
  aws-c-compression          0.3.2         h720e601_4                    conda-forge
  aws-c-http                 0.11.0        h38ae05a_4                    conda-forge
  aws-c-io                   0.27.3        h6f4d18d_1                    conda-forge
  aws-c-s3                   0.12.8        h46fcd08_1                    conda-forge
  aws-c-sdkutils             0.2.7         h720e601_2                    conda-forge
  aws-checksums              0.2.10        h720e601_4                    conda-forge
  backports.zstd             1.6.0         py311h6b1f9c4_0               conda-forge
  bcftools                   1.24          h487d631_0                    bioconda   
  biopython                  1.87          py311h49ec1c0_0               conda-forge
  blosc                      1.21.6        he440d0b_1                    conda-forge
  brotli-python              1.2.0         py311h66f275b_1               conda-forge
  bwa                        0.7.19        h577a1d6_1                    bioconda   
  bzip2                      1.0.8         hda65f42_9                    conda-forge
  c-ares                     1.34.8        hb03c661_0                    conda-forge
  c-blosc2                   3.2.3         hc31b594_0                    conda-forge
  ca-certificates            2026.7.22     hbd8a1cb_0                    conda-forge
  cached-property            1.5.2         hd8ed1ab_2                    conda-forge
  cached_property            1.5.2         pyha770c72_2                  conda-forge
  certifi                    2026.7.22     pyhd8ed1ab_0                  conda-forge
  cffi                       1.17.1        py311hf29c0ef_0               conda-forge
  charset-normalizer         3.4.9         pyhd8ed1ab_0                  conda-forge
  clair3                     2.0.2         py311hbc58adc_0               bioconda   
  click                      8.4.2         pyhc90fa1f_0                  conda-forge
  clint                      0.5.1         py_1                          conda-forge
  coin-or-cbc                2.10.13       h4d16d09_1                    conda-forge
  coin-or-cgl                0.60.10       hc46dffc_1                    conda-forge
  coin-or-clp                1.17.11       hc03379b_1                    conda-forge
  coin-or-osi                0.108.12      hf4fecb4_1                    conda-forge
  coin-or-utils              2.11.13       hc93afbd_1                    conda-forge
  colorama                   0.4.6         pyhd8ed1ab_1                  conda-forge
  coloredlogs                15.0.1        pyhd8ed1ab_4                  conda-forge
  colormath                  3.0.0         pyhd8ed1ab_4                  conda-forge
  cpython                    3.11.15       py311hd8ed1ab_1               conda-forge
  cyvcf2                     0.34.0        py311h7a3335f_0               bioconda   
  docutils                   0.23          pyhcf101f3_0                  conda-forge
  exceptiongroup             1.3.1         pyhd8ed1ab_0                  conda-forge
  expat                      2.8.1         hecca717_1                    conda-forge
  filelock                   3.32.0        pyhd8ed1ab_0                  conda-forge
  fmt                        12.1.0        hff5e90c_0                    conda-forge
  font-ttf-dejavu-sans-mono  2.37          hab24e00_0                    conda-forge
  font-ttf-inconsolata       3.000         h77eed37_0                    conda-forge
  font-ttf-source-code-pro   2.038         h77eed37_0                    conda-forge
  font-ttf-ubuntu            0.83          h77eed37_3                    conda-forge
  fontconfig                 2.18.2        h27c8c51_0                    conda-forge
  fonts-conda-forge          1             hc364b38_1                    conda-forge
  fsspec                     2026.6.0      pyhd8ed1ab_0                  conda-forge
  gawk                       5.4.1         h0a3468a_0                    conda-forge
  gmp                        6.3.0         hac33072_2                    conda-forge
  gmpy2                      2.3.0         py311h92a432a_1               conda-forge
  gsl                        2.7           he838d99_0                    conda-forge
  h2                         4.3.0         pyhcf101f3_0                  conda-forge
  h5py                       3.16.0        nompi_py311hfef529e_102       conda-forge
  hdf5                       2.1.0         nompi_h654f344_110            conda-forge
  hdf5plugin                 7.0.0         py311h23f7e3b_1               conda-forge
  hpack                      4.2.0         pyhd8ed1ab_0                  conda-forge
  htslib                     1.23.1        h633afcb_0                    bioconda   
  humanfriendly              10.0          pyh707e725_8                  conda-forge
  humanize                   4.16.0        pyhd8ed1ab_0                  conda-forge
  hyperframe                 6.1.0         pyhd8ed1ab_0                  conda-forge
  icu                        78.3          h33c6efd_1                    conda-forge
  idna                       3.18          pyhcf101f3_0                  conda-forge
  importlib-metadata         9.0.0         pyhcf101f3_0                  conda-forge
  iniconfig                  2.3.0         pyhd8ed1ab_0                  conda-forge
  isa-l                      2.32.1        hb03c661_0                    conda-forge
  jinja2                     3.1.6         pyhcf101f3_1                  conda-forge
  jsonschema                 4.26.0        pyhcf101f3_0                  conda-forge
  jsonschema-specifications  2025.9.1      pyhcf101f3_0                  conda-forge
  k8                         1.2           he8db53b_6                    bioconda   
  kaleido-core               0.2.1         h3644ca4_0                    conda-forge
  kernel-headers_linux-64    6.12.0        he073ed8_6                    conda-forge
  keyutils                   1.6.3         hb9d3cd8_0                    conda-forge
  krb5                       1.22.2        hbde042b_1                    conda-forge
  lcms2                      2.19.1        h0c24ade_1                    conda-forge
  ld_impl_linux-64           2.46.1        default_hbd61a6d_102          conda-forge
  lerc                       4.1.0         hdb68285_0                    conda-forge
  libabseil                  20260526.0    cxx17_h7b12aa8_1              conda-forge
  libaec                     1.1.5         h088129d_0                    conda-forge
  libasprintf                0.25.1        h3f43e3d_1                    conda-forge
  libblas                    3.11.0        8_h4a7cf45_openblas           conda-forge
  libcblas                   3.11.0        8_h0358290_openblas           conda-forge
  libcurl                    8.21.0        hae6b9f4_2                    conda-forge
  libdeflate                 1.25          h17f619e_0                    conda-forge
  libedit                    3.1.20250104  pl5321h7949ede_0              conda-forge
  libev                      4.33          hd590300_2                    conda-forge
  libexpat                   2.8.1         hecca717_1                    conda-forge
  libffi                     3.5.2         h3435931_0                    conda-forge
  libfreetype                2.14.3        ha770c72_0                    conda-forge
  libfreetype6               2.14.3        h73754d4_0                    conda-forge
  libgcc                     15.2.0        he0feb66_19                   conda-forge
  libgcc-ng                  15.2.0        h69a702a_19                   conda-forge
  libgettextpo               0.25.1        h3f43e3d_1                    conda-forge
  libgfortran                15.2.0        h69a702a_19                   conda-forge
  libgfortran5               15.2.0        h68bc16d_19                   conda-forge
  libiconv                   1.18          h3b78370_2                    conda-forge
  libjpeg-turbo              3.2.0         hb03c661_0                    conda-forge
  liblapack                  3.11.0        8_h47877c9_openblas           conda-forge
  liblapacke                 3.11.0        8_h6ae95b6_openblas           conda-forge
  liblzma                    5.8.3         hb03c661_0                    conda-forge
  libnghttp2                 1.68.1        h877daf1_0                    conda-forge
  libnsl                     2.0.1         hb9d3cd8_1                    conda-forge
  libopenblas                0.3.33        openmp_hd680484_0             conda-forge
  libpng                     1.6.58        h421ea60_0                    conda-forge
  libprotobuf                7.35.1        h2840a7c_2                    conda-forge
  libpsl                     0.22.0        h49b2146_1                    conda-forge
  libsqlite                  3.53.3        h0c1763c_0                    conda-forge
  libssh2                    1.11.1        hcf80075_0                    conda-forge
  libstdcxx                  15.2.0        h934c35e_19                   conda-forge
  libstdcxx-ng               15.2.0        hdf11a46_19                   conda-forge
  libtiff                    4.7.2         h9d88235_0                    conda-forge
  libtorch                   2.12.1        cpu_generic_hc89a2c3_0        conda-forge
  libuuid                    2.42.2        h5347b49_0                    conda-forge
  libuv                      1.52.1        h280c20c_0                    conda-forge
  libwebp-base               1.6.0         hd42ef1d_0                    conda-forge
  libxcb                     1.17.0        h8a09558_0                    conda-forge
  libxcrypt                  4.4.36        hd590300_1                    conda-forge
  libzlib                    1.3.2         h25fd6f3_2                    conda-forge
  lightning-utilities        0.15.3        pyhd8ed1ab_0                  conda-forge
  llvm-openmp                22.1.8        h4922eb0_0                    conda-forge
  longphase                  2.0.2         h4e109e1_0                    bioconda   
  lz4-c                      1.10.0        h5888daf_1                    conda-forge
  mafft                      7.526         h4bc722e_0                    conda-forge
  markdown                   3.10.2        pyhcf101f3_0                  conda-forge
  markdown-it-py             4.2.0         pyhd8ed1ab_0                  conda-forge
  markupsafe                 3.0.3         py311h3778330_1               conda-forge
  mathjax                    2.7.7         ha770c72_3                    conda-forge
  mdurl                      0.1.2         pyhd8ed1ab_1                  conda-forge
  minimap2                   2.31          h118bc1c_0                    bioconda   
  mpc                        1.4.0         he0a73b1_0                    conda-forge
  mpfr                       4.2.2         he0a73b1_0                    conda-forge
  mpmath                     1.4.1         pyhd8ed1ab_0                  conda-forge
  multiqc                    1.35          pyhdfd78af_1                  bioconda   
  narwhals                   2.24.0        pyhcf101f3_0                  conda-forge
  natsort                    8.4.0         pyhcf101f3_2                  conda-forge
  ncurses                    6.6           hdb14827_0                    conda-forge
  networkx                   3.6.1         pyhcf101f3_0                  conda-forge
  nomkl                      1.0           h5ca1d4c_0                    conda-forge
  nspr                       4.38          h29cc59b_0                    conda-forge
  nss                        3.118         h445c969_0                    conda-forge
  numexpr                    2.14.2        py311h3143de2_100             conda-forge
  numpy                      2.4.6         py311h2e04523_0               conda-forge
  onednn                     3.12          omp_h83de36e_0                conda-forge
  openjpeg                   2.5.4         h55fea9a_0                    conda-forge
  openssl                    3.6.3         h35e630c_0                    conda-forge
  optree                     0.19.1        py311hdf67eae_0               conda-forge
  packaging                  26.2          pyhc364b38_0                  conda-forge
  pandas                     3.0.3         py311h8032f78_0               conda-forge
  parallel                   20260722      hd8ed1ab_0                    conda-forge
  pbzip2                     1.1.13        h1fcc475_2                    conda-forge
  perl                       5.32.1        7_hd590300_perl5              conda-forge
  pigz                       2.8           h421ea60_2                    conda-forge
  pillow                     12.3.0        py311hf88fc01_0               conda-forge
  pip                        26.1.2        pyh8b19718_0                  conda-forge
  plotly                     6.9.0         pyhd8ed1ab_0                  conda-forge
  pluggy                     1.6.0         pyhf9edf01_1                  conda-forge
  polars                     1.43.0        pyh8da0edf_0                  conda-forge
  polars-runtime-32          1.43.0        py310h9585f58_0               conda-forge
  polars-runtime-compat      1.43.0        py310h761ce75_0               conda-forge
  primalbedtools             1.0.0         pyhdfd78af_0                  bioconda   
  pthread-stubs              0.4           hb9d3cd8_1002                 conda-forge
  pulp                       2.8.0         py311h77a8cca_3               conda-forge
  pyaml-env                  1.2.2         pyhd8ed1ab_0                  conda-forge
  pybind11                   3.0.3         pyhfe8187e_0                  conda-forge
  pybind11-abi               11            hc364b38_1                    conda-forge
  pybind11-global            3.0.3         pyh648e204_0                  conda-forge
  pycparser                  3.0           pyhcf101f3_0                  conda-forge
  pydantic                   2.13.4        pyhcf101f3_0                  conda-forge
  pydantic-core              2.46.4        py311h902ca64_0               conda-forge
  pyfaidx                    0.9.0.4       pyhdfd78af_0                  bioconda   
  pygments                   2.20.0        pyhd8ed1ab_0                  conda-forge
  pyparsing                  3.3.2         pyhcf101f3_0                  conda-forge
  pysam                      0.24.0        py311h5f69268_1               bioconda   
  pysocks                    1.7.1         pyha55dd90_7                  conda-forge
  pytest                     9.1.1         pyhc364b38_2                  conda-forge
  python                     3.11.15       h7508c33_1_cpython            conda-forge
  python-dateutil            2.9.0.post0   pyhe01879c_2                  conda-forge
  python-dotenv              1.2.2         pyhcf101f3_0                  conda-forge
  python-gil                 3.11.15       hd8ed1ab_1                    conda-forge
  python-isal                1.8.0         py311h49ec1c0_2               conda-forge
  python-kaleido             0.2.1         pyhd8ed1ab_0                  conda-forge
  python-zlib-ng             1.0.0         py311h15805fc_2               conda-forge
  python_abi                 3.11          8_cp311                       conda-forge
  pytorch                    2.12.1        cpu_generic_py311_h50ef5b4_0  conda-forge
  pytorch-cpu                2.12.1        cpu_generic_h6ea6555_0        conda-forge
  pyvcf3                     1.0.4         py311haab0aaa_0               bioconda   
  pyyaml                     6.0.3         py311h3778330_1               conda-forge
  readline                   8.3           h853b02a_0                    conda-forge
  referencing                0.37.0        pyhcf101f3_0                  conda-forge
  regex                      2026.7.19     py311h49ec1c0_0               conda-forge
  requests                   2.34.2        pyhcf101f3_0                  conda-forge
  rich                       15.0.0        pyhcf101f3_0                  conda-forge
  rich-click                 1.9.8         pyh8f84b5b_0                  conda-forge
  rpds-py                    2026.6.3      py311h1baac5b_0               conda-forge
  s2n                        1.7.5         h7e3ee7f_1                    conda-forge
  samtools                   1.23.1        ha83d96e_0                    bioconda   
  scipy                      1.17.1        py311hbe70eeb_1               conda-forge
  seqtk                      1.5           h577a1d6_1                    bioconda   
  setuptools                 81.0.0        pyh332efcf_0                  conda-forge
  six                        1.17.0        pyhe01879c_1                  conda-forge
  sleef                      3.9.0         ha0421bc_0                    conda-forge
  snappy                     1.2.2         h03e3b7b_1                    conda-forge
  spectra                    0.0.11        pyhd8ed1ab_2                  conda-forge
  sqlite                     3.53.3        hbc0de68_0                    conda-forge
  sympy                      1.14.0        pyh2585a3b_106                conda-forge
  sysroot_linux-64           2.39          hc4b9eeb_6                    conda-forge
  tiktoken                   0.13.0        py311h5c31b33_0               conda-forge
  tk                         8.6.13        noxft_hd70dff1_3              conda-forge
  tomli                      2.4.1         pyhcf101f3_0                  conda-forge
  torchmetrics               1.9.0         pyhd8ed1ab_0                  conda-forge
  tqdm                       4.69.0        pyh8f84b5b_0                  conda-forge
  typeguard                  4.5.2         pyhcf101f3_0                  conda-forge
  typing-extensions          4.16.0        h69aa097_0                    conda-forge
  typing-inspection          0.4.2         pyhcf101f3_2                  conda-forge
  typing_extensions          4.16.0        pyhcf101f3_0                  conda-forge
  tzdata                     2026c         h151e31d_0                    conda-forge
  urllib3                    2.7.0         pyhd8ed1ab_0                  conda-forge
  whatshap                   2.8           py311he264feb_0               bioconda   
  wheel                      0.47.0        pyhd8ed1ab_0                  conda-forge
  xopen                      2.1.0         pyh707e725_0                  conda-forge
  xorg-libxau                1.0.12        hb03c661_1                    conda-forge
  xorg-libxdmcp              1.1.5         hb03c661_1                    conda-forge
  yaml                       0.2.5         h280c20c_3                    conda-forge
  zipp                       4.1.0         pyhcf101f3_0                  conda-forge
  zlib-ng                    2.3.3         hceb46e0_1                    conda-forge
  zstd                       1.5.7         hb78ec9c_6                    conda-forge
```
</details>


There is also a very useful SOP: [https://artic.network/fieldbioinformatics/fieldbioinformatics-sop.html](https://artic.network/fieldbioinformatics/fieldbioinformatics-sop.html)

And additional documentation: [https://artic.readthedocs.io/en/latest/](https://artic.readthedocs.io/en/latest/)

> A bioinformatics pipeline for working with virus sequencing data sequenced with nanopore.

WARNING : This container does not contain the primer schemes found at [https://github.com/artic-network/primer-schemes](https://github.com/artic-network/primer-schemes). Those will have to be downloaded and mounted separately. There are now commands to download the use the primers at runtime.

This image DOES contain the models downloaded with `artic_get_models`

## Example Usage with the artic primers

```bash
# filtering reads
artic guppyplex --min-length 400 --max-length 700  --directory . --prefix SRR22452250_1.fastq.gz --output SRR22452250_1_filtered.fastq

# downloading medaka models for clair3
artic_get_models

# running the artic minion workflow
# the result files will all start with test*
artic minion --normalise 200 --medaka-model ont --threads 4 --read-file sample.fastq --scheme-directory primer-schemes --scheme-version 5.3.2 nCoV-2019 test

# running the artic minion workflow with user-provided primer bedfiles and references
artic minion --normalise 200 --threads 4  --model ont --read-file sample.fastq --scheme-name sars-cov-2  --scheme-version  V5.3.2 name
```

In general, any primer scheme can be used as long as it meets [artic's requirements](https://github.com/artic-network/primer-schemes).

## Clair3 models

Artic uses [Clair3](https://github.com/HKU-BAL/Clair3), which uses its own models for polishing. ONT chemistries update frequently, and artic can throw errors when corresponding ONT models are not found.

These are the models in this image:

```bash
# included models at /opt/conda/envs/artic/bin/models
hifi
hifi_revio
hifi_sequel2
ilmn
ont
ont_guppy5
r1041_e82_260bps_fast_g632
r1041_e82_260bps_hac_g632
r1041_e82_260bps_hac_v400
r1041_e82_260bps_hac_v410
r1041_e82_260bps_sup_g632
r1041_e82_260bps_sup_v400
r1041_e82_260bps_sup_v410
r1041_e82_400bps_fast_g615
r1041_e82_400bps_fast_g632
r1041_e82_400bps_hac_g615
r1041_e82_400bps_hac_g632
r1041_e82_400bps_hac_v400
r1041_e82_400bps_hac_v410
r1041_e82_400bps_hac_v420
r1041_e82_400bps_hac_v430
r1041_e82_400bps_hac_v500
r1041_e82_400bps_hac_v520
r1041_e82_400bps_hac_v520_with_mv
r1041_e82_400bps_hac_v600
r1041_e82_400bps_hac_v600_with_mv
r1041_e82_400bps_hac_with_mv
r1041_e82_400bps_sup_g615
r1041_e82_400bps_sup_v400
r1041_e82_400bps_sup_v410
r1041_e82_400bps_sup_v420
r1041_e82_400bps_sup_v430
r1041_e82_400bps_sup_v430_bacteria_finetuned
r1041_e82_400bps_sup_v500
r1041_e82_400bps_sup_v520
r1041_e82_400bps_sup_v520_with_mv
r1041_e82_400bps_sup_with_mv
r104_e81_hac_g5015
r104_e81_sup_g5015
r941_prom_hac_g360+g422
r941_prom_sup_g5014
```
