build-files/artic/1.11.2/README.md
# artic fieldbioinformatics container

Main tool : [artic](https://github.com/artic-network/fieldbioinformatics)

Full documentation: [https://github.com/artic-network/fieldbioinformatics](https://github.com/artic-network/fieldbioinformatics)

<details>

<summary>Additional tools installed via micromamba:</summary>

```
List of packages in environment: "/opt/conda/envs/artic"

  Name                       Version       Build                       Channel    
────────────────────────────────────────────────────────────────────────────────────
  _openmp_mutex              4.5           8_kmp_llvm                  conda-forge
  _python_abi3_support       1.0           hd8ed1ab_3                  conda-forge
  align_trim                 1.2.0         pyhdfd78af_0                bioconda   
  amply                      0.1.7         pyhd8ed1ab_0                conda-forge
  annotated-types            0.8.0         pyhd8ed1ab_0                conda-forge
  args                       0.1.0         pyhd8ed1ab_1004             conda-forge
  artic                      1.11.2        pyhdfd78af_0                bioconda   
  attrs                      26.1.0        pyhcf101f3_0                conda-forge
  aws-c-auth                 0.10.4        h4610da3_2                  conda-forge
  aws-c-cal                  0.9.15        h6bbde05_1                  conda-forge
  aws-c-common               0.14.3        hb03c661_0                  conda-forge
  aws-c-compression          0.3.2         h01ee8f8_5                  conda-forge
  aws-c-http                 0.11.0        hbe094ff_5                  conda-forge
  aws-c-io                   0.27.5        h4f381ba_1                  conda-forge
  aws-c-s3                   0.13.1        h7508075_1                  conda-forge
  aws-c-sdkutils             0.2.7         h01ee8f8_3                  conda-forge
  aws-checksums              0.2.10        h01ee8f8_5                  conda-forge
  backports.zstd             1.7.0         py311h6f959d0_1             conda-forge
  bcftools                   1.24          h118bc1c_2                  bioconda   
  biopython                  1.88          py311h0d48ccd_1             conda-forge
  blosc                      1.21.6        he440d0b_1                  conda-forge
  brotli-python              1.2.0         py311heb3be6f_4             conda-forge
  bwa                        0.7.19        h577a1d6_1                  bioconda   
  bzip2                      1.0.8         hda65f42_10                 conda-forge
  c-ares                     1.34.8        hebe6cf0_2                  conda-forge
  c-blosc2                   3.3.4         hea3f660_1                  conda-forge
  ca-certificates            2026.7.22     hbd8a1cb_0                  conda-forge
  cached-property            2.0.1         pyhcf101f3_0                conda-forge
  cached_property            2.0.1         pyhcf101f3_0                conda-forge
  certifi                    2026.7.22     pyhd8ed1ab_0                conda-forge
  cffi                       1.17.1        py311hf29c0ef_0             conda-forge
  charset-normalizer         3.5.1         pyhd8ed1ab_0                conda-forge
  clair3                     2.0.3         py311hbc58adc_0             bioconda   
  click                      8.5.0         pyh5ded981_0                conda-forge
  clint                      0.5.1         py_1                        conda-forge
  coin-or-cbc                2.10.13       h4d16d09_1                  conda-forge
  coin-or-cgl                0.60.10       hc46dffc_1                  conda-forge
  coin-or-clp                1.17.11       hc03379b_1                  conda-forge
  coin-or-osi                0.108.12      hf4fecb4_1                  conda-forge
  coin-or-utils              2.11.13       hc93afbd_1                  conda-forge
  colorama                   0.4.6         pyhd8ed1ab_1                conda-forge
  coloredlogs                15.0.1        pyhd8ed1ab_4                conda-forge
  colormath                  3.0.0         pyhd8ed1ab_4                conda-forge
  cpython                    3.11.16       py311hd8ed1ab_2             conda-forge
  cyvcf2                     0.34.0        py311h7a3335f_0             bioconda   
  docutils                   0.23          pyhcf101f3_0                conda-forge
  exceptiongroup             1.3.1         pyhd8ed1ab_0                conda-forge
  expat                      2.8.1         hecca717_1                  conda-forge
  filelock                   3.32.6        pyhd8ed1ab_0                conda-forge
  fmt                        12.1.0        h76c4fd7_1                  conda-forge
  font-ttf-dejavu-sans-mono  2.37          hab24e00_0                  conda-forge
  font-ttf-inconsolata       3.000         h77eed37_0                  conda-forge
  font-ttf-source-code-pro   2.038         h77eed37_0                  conda-forge
  font-ttf-ubuntu            0.83          h77eed37_3                  conda-forge
  fontconfig                 2.18.3        h4db4eae_1                  conda-forge
  fonts-conda-forge          1             hc364b38_1                  conda-forge
  fsspec                     2026.7.0      pyhd8ed1ab_0                conda-forge
  gawk                       5.4.1         h0a3468a_0                  conda-forge
  gmp                        6.3.0         hfd2156b_3                  conda-forge
  gmpy2                      2.3.1         py311hbc40be8_1             conda-forge
  gsl                        2.6           he838d99_2                  conda-forge
  h2                         4.4.1         pyhcf101f3_0                conda-forge
  h5py                       3.16.0        nompi_py311h73d0c7d_104     conda-forge
  hdf5                       2.2.0         nompi_hc529623_100          conda-forge
  hdf5plugin                 7.1.0         py311ha7e3f55_0             conda-forge
  hpack                      4.2.0         pyhd8ed1ab_0                conda-forge
  htslib                     1.24          ha79157c_0                  bioconda   
  humanfriendly              10.0          pyh707e725_8                conda-forge
  humanize                   4.16.0        pyhd8ed1ab_0                conda-forge
  hyperframe                 6.1.0         pyhd8ed1ab_0                conda-forge
  icu                        78.3          py310h44b86e0_2             conda-forge
  idna                       3.19          pyhcf101f3_0                conda-forge
  importlib-metadata         9.0.1         pyhcf101f3_0                conda-forge
  iniconfig                  2.3.0         pyhd8ed1ab_0                conda-forge
  isa-l                      2.32.1        hb03c661_0                  conda-forge
  jinja2                     3.1.6         pyhcf101f3_1                conda-forge
  jsonschema                 4.26.0        pyhcf101f3_1                conda-forge
  jsonschema-specifications  2025.9.1      pyhcf101f3_0                conda-forge
  k8                         1.2           he8db53b_6                  bioconda   
  kaleido-core               0.2.1         h3644ca4_0                  conda-forge
  kernel-headers_linux-64    6.12.0        he073ed8_6                  conda-forge
  keyutils                   1.6.3         h7cc23a3_1                  conda-forge
  krb5                       1.22.2        hbc21106_2                  conda-forge
  lcms2                      2.19.1        h9073bf1_3                  conda-forge
  ld_impl_linux-64           2.46.1        default_hbd61a6d_102        conda-forge
  lerc                       4.2.0         hdb68285_0                  conda-forge
  libabseil                  20260526.0    cxx17_h0dc7533_2            conda-forge
  libaec                     1.1.5         h088129d_0                  conda-forge
  libasprintf                0.25.1        h3f43e3d_1                  conda-forge
  libblas                    3.11.0        11_h5875eb1_mkl             conda-forge
  libcblas                   3.11.0        11_hfef963f_mkl             conda-forge
  libcurl                    8.22.0        ha042cf0_0                  conda-forge
  libdeflate                 1.25          hd45a770_1                  conda-forge
  libedit                    3.1.20250104  pl5321h373387f_1            conda-forge
  libev                      4.33          h280c20c_3                  conda-forge
  libexpat                   2.8.1         hecca717_1                  conda-forge
  libffi                     3.7.0         h81df57d_1                  conda-forge
  libfreetype                2.14.3        ha770c72_2                  conda-forge
  libfreetype6               2.14.3        h5e6c136_2                  conda-forge
  libgcc                     16.2.0        ha9f2e26_5                  conda-forge
  libgcc-ng                  16.2.0        h69a702a_5                  conda-forge
  libgettextpo               0.25.1        h3f43e3d_1                  conda-forge
  libgfortran                16.2.0        h69a702a_5                  conda-forge
  libgfortran5               16.2.0        h6b99dfc_5                  conda-forge
  libhwloc                   2.13.0        default_he001693_1000       conda-forge
  libiconv                   1.18          h0cb94f2_3                  conda-forge
  libjpeg-turbo              3.2.0         hb03c661_1                  conda-forge
  liblapack                  3.11.0        11_h5e43f62_mkl             conda-forge
  liblapacke                 3.11.0        11_hdba1596_mkl             conda-forge
  liblzma                    5.8.3         hb03c661_1                  conda-forge
  libnghttp2                 1.68.1        h74cf4be_1                  conda-forge
  libnsl                     2.0.1         hb9d3cd8_1                  conda-forge
  libpng                     1.6.58        h922cc85_1                  conda-forge
  libprotobuf                7.35.1        h622638d_3                  conda-forge
  libpsl                     0.23.1        hd9e3e90_1                  conda-forge
  libpython                  3.11.16       h0c77377_2_cpython          conda-forge
  libsqlite                  3.53.4        h13e7031_1                  conda-forge
  libssh2                    1.11.1        h6154650_1                  conda-forge
  libstdcxx                  16.2.0        h934c35e_5                  conda-forge
  libstdcxx-ng               16.2.0        hdf11a46_5                  conda-forge
  libtiff                    4.7.2         hcc2c06a_1                  conda-forge
  libtorch                   2.13.0        cpu_mkl_h40bd1c6_102        conda-forge
  libuuid                    2.42.3        hcfc3c73_0                  conda-forge
  libuv                      1.52.1        h280c20c_1                  conda-forge
  libwebp-base               1.6.0         hd42ef1d_1                  conda-forge
  libxcb                     1.17.0        hb83e432_2                  conda-forge
  libxcrypt                  4.4.38        h280c20c_0                  conda-forge
  libxml2                    2.15.4        h7df9aa5_0                  conda-forge
  libxml2-16                 2.15.4        hf3af7cc_0                  conda-forge
  libzlib                    1.3.2         h25fd6f3_3                  conda-forge
  lightning-utilities        0.15.3        pyhd8ed1ab_0                conda-forge
  llvm-openmp                23.1.1        h7148c6a_0                  conda-forge
  longphase                  2.0.2         h4e109e1_0                  bioconda   
  lz4-c                      1.10.0        hee9eb32_2                  conda-forge
  mafft                      7.526         h4bc722e_0                  conda-forge
  markdown                   3.10.3        pyhcf101f3_0                conda-forge
  markdown-it-py             4.2.0         pyhd8ed1ab_0                conda-forge
  markupsafe                 3.0.3         py311h3778330_1             conda-forge
  mathjax                    2.7.7         ha770c72_3                  conda-forge
  mdurl                      0.1.2         pyhd8ed1ab_1                conda-forge
  minimap2                   2.31          h118bc1c_0                  bioconda   
  mkl                        2026.1.0      hd2095e1_245                conda-forge
  mpc                        1.4.0         ha2cb11d_1                  conda-forge
  mpfr                       4.2.2         ha2cb11d_1                  conda-forge
  mpmath                     1.4.1         pyhd8ed1ab_0                conda-forge
  multiqc                    1.35          pyhdfd78af_1                bioconda   
  narwhals                   2.26.0        pyh5ded981_0                conda-forge
  natsort                    8.4.0         pyhcf101f3_2                conda-forge
  ncurses                    6.6           hdb14827_1                  conda-forge
  networkx                   3.6.1         pyhcf101f3_0                conda-forge
  nspr                       4.40          h29cc59b_0                  conda-forge
  nss                        3.118         h445c969_0                  conda-forge
  numexpr                    2.14.2        mkl_py311h6679941_1         conda-forge
  numpy                      2.4.6         py311h2e04523_0             conda-forge
  onednn                     3.12          omp_h83de36e_0              conda-forge
  openjpeg                   2.5.4         heb1ab33_2                  conda-forge
  openjph                    0.31.0        h8d634f6_0                  conda-forge
  openssl                    3.6.4         h781a0a9_0                  conda-forge
  optree                     0.20.0        py311h5f908af_1             conda-forge
  packaging                  26.3          pyhc364b38_0                conda-forge
  pandas                     3.0.5         py311h8032f78_1             conda-forge
  parallel                   20260722      hd8ed1ab_0                  conda-forge
  pbzip2                     1.1.13        h1fcc475_2                  conda-forge
  perl                       5.32.1        9_h7cc23a3_perl5            conda-forge
  pigz                       2.8           h421ea60_2                  conda-forge
  pillow                     12.3.0        py311hf303fd3_4             conda-forge
  pip                        26.2.1        pyh8b19718_0                conda-forge
  plotly                     7.0.0         pyhd8ed1ab_0                conda-forge
  pluggy                     1.6.0         pyhf9edf01_1                conda-forge
  polars                     1.44.2        pyh3138b34_0                conda-forge
  polars-runtime-32          1.44.2        py311hb519a9e_0             conda-forge
  polars-runtime-compat      1.44.2        py311haeeaf9e_0             conda-forge
  primalbedtools             1.1.0         pyhdfd78af_0                bioconda   
  pthread-stubs              0.4           h7cc23a3_1004               conda-forge
  pulp                       2.8.0         py311h77a8cca_3             conda-forge
  pyaml-env                  1.2.2         pyh5ded981_1                conda-forge
  pybind11                   3.0.4         pyh293190f_0                conda-forge
  pybind11-abi               11            hc364b38_1                  conda-forge
  pybind11-global            3.0.4         pyh648e204_0                conda-forge
  pycparser                  3.0           pyhcf101f3_0                conda-forge
  pydantic                   2.13.5        pyhcf101f3_0                conda-forge
  pydantic-core              2.46.5        py311ha6e1976_1             conda-forge
  pyfaidx                    0.9.0.4       pyhdfd78af_0                bioconda   
  pygments                   2.21.0        pyhcf101f3_0                conda-forge
  pyparsing                  3.3.2         pyhcf101f3_0                conda-forge
  pysam                      0.24.1        py311h5f69268_0             bioconda   
  pysocks                    1.7.1         pyha55dd90_7                conda-forge
  pytest                     9.1.1         pyhc364b38_2                conda-forge
  python                     3.11.16       h5f976f7_2_cpython          conda-forge
  python-dateutil            2.9.0.post0   pyhe01879c_2                conda-forge
  python-dotenv              1.2.3         pyhcf101f3_0                conda-forge
  python-gil                 3.11.16       hd8ed1ab_2                  conda-forge
  python-isal                1.8.0         py311h0d48ccd_3             conda-forge
  python-kaleido             0.2.1         pyhd8ed1ab_0                conda-forge
  python-zlib-ng             1.0.0         py311h15805fc_2             conda-forge
  python_abi                 3.11          9_cp311                     conda-forge
  pytorch                    2.13.0        cpu_mkl_py311_h249fa5d_102  conda-forge
  pytorch-cpu                2.13.0        cpu_mkl_hd61e0f4_102        conda-forge
  pyvcf3                     1.0.4         py311haab0aaa_0             bioconda   
  pyyaml                     6.0.3         py311h3778330_1             conda-forge
  readline                   8.3           hd6e31c0_1                  conda-forge
  referencing                0.37.0        pyhcf101f3_0                conda-forge
  regex                      2026.9.10     py311h0d48ccd_0             conda-forge
  requests                   2.34.2        pyhcf101f3_0                conda-forge
  rich                       15.0.0        pyhcf101f3_0                conda-forge
  rich-click                 1.9.9         pyhfa0c392_0                conda-forge
  rpds-py                    2026.6.3      py311ha6e1976_2             conda-forge
  s2n                        1.7.6         h7e3ee7f_0                  conda-forge
  samtools                   1.24          h9dcdb79_1                  bioconda   
  scipy                      1.17.1        py311hbe70eeb_1             conda-forge
  seqtk                      1.5           h577a1d6_1                  bioconda   
  setuptools                 81.0.0        pyh332efcf_0                conda-forge
  six                        1.17.0        pyhe01879c_1                conda-forge
  sleef                      3.9.0         ha0421bc_0                  conda-forge
  snappy                     1.2.2         h03e3b7b_1                  conda-forge
  spectra                    0.0.11        pyhd8ed1ab_2                conda-forge
  sqlite                     3.53.4        h9ffa6c4_1                  conda-forge
  sympy                      1.14.0        pyh2585a3b_106              conda-forge
  sysroot_linux-64           2.39          hc4b9eeb_6                  conda-forge
  tbb                        2023.1.0      hfd44327_0                  conda-forge
  tiktoken                   0.14.0        py311hc3af579_1             conda-forge
  tk                         8.6.13        noxft_h1df4ec4_4            conda-forge
  tomli                      2.4.1         pyhcf101f3_0                conda-forge
  torchmetrics               1.9.0         pyhd8ed1ab_0                conda-forge
  tqdm                       4.70.1        pyhfa0c392_0                conda-forge
  typeguard                  4.6.0         pyhcf101f3_0                conda-forge
  typing-extensions          4.16.0        h69aa097_0                  conda-forge
  typing-inspection          0.4.4         pyhcf101f3_0                conda-forge
  typing_extensions          4.16.0        pyhcf101f3_0                conda-forge
  tzdata                     2026c         h151e31d_0                  conda-forge
  urllib3                    2.8.0         pyhd8ed1ab_0                conda-forge
  whatshap                   2.8           py311he264feb_0             bioconda   
  wheel                      0.48.0        pyhd8ed1ab_0                conda-forge
  xopen                      2.1.0         pyh707e725_0                conda-forge
  xorg-libxau                1.0.12        h7cc23a3_2                  conda-forge
  xorg-libxdmcp              1.1.5         hb03c661_2                  conda-forge
  yaml                       0.2.5         hebe6cf0_3                  conda-forge
  zipp                       4.1.0         pyhcf101f3_0                conda-forge
  zlib-ng                    2.3.3         hce19668_1                  conda-forge
  zstd                       1.5.7         hb78ec9c_7                  conda-forge
```
</details>


There is also a very useful SOP: [https://artic.network/fieldbioinformatics/fieldbioinformatics-sop.html](https://artic.network/fieldbioinformatics/fieldbioinformatics-sop.html)

And additional documentation: [https://artic.readthedocs.io/en/latest/](https://artic.readthedocs.io/en/latest/)

> A bioinformatics pipeline for working with virus sequencing data sequenced with nanopore.

WARNING : This container does not contain the primer schemes found at [https://github.com/artic-network/primer-schemes](https://github.com/artic-network/primer-schemes). Those will have to be downloaded and mounted separately. There are now commands to download the use the primers at runtime.

This image DOES contain the models downloaded with `artic_get_models`

## Example Usage with the artic primers

```bash
# filtering reads
artic guppyplex --min-length 400 --max-length 700  --directory . --prefix SRR22452250_1.fastq.gz --output SRR22452250_1_filtered.fastq

# downloading medaka models for clair3
artic_get_models

# running the artic minion workflow
# the result files will all start with test*
artic minion --normalise 200 --medaka-model ont --threads 4 --read-file sample.fastq --scheme-directory primer-schemes --scheme-version 5.3.2 nCoV-2019 test

# running the artic minion workflow with user-provided primer bedfiles and references
artic minion --normalise 200 --threads 4  --model ont --read-file sample.fastq --scheme-name sars-cov-2  --scheme-version  V5.3.2 name
```

In general, any primer scheme can be used as long as it meets [artic's requirements](https://github.com/artic-network/primer-schemes).

## Clair3 models

Artic uses [Clair3](https://github.com/HKU-BAL/Clair3), which uses its own models for polishing. ONT chemistries update frequently, and artic can throw errors when corresponding ONT models are not found.

These are the models in this image:

```bash
# included models at /opt/conda/envs/artic/bin/models
hifi
hifi_revio
hifi_sequel2
ilmn
ont
ont_guppy5
r1041_e82_260bps_fast_g632
r1041_e82_260bps_hac_g632
r1041_e82_260bps_hac_v400
r1041_e82_260bps_hac_v410
r1041_e82_260bps_sup_g632
r1041_e82_260bps_sup_v400
r1041_e82_260bps_sup_v410
r1041_e82_400bps_fast_g615
r1041_e82_400bps_fast_g632
r1041_e82_400bps_hac_g615
r1041_e82_400bps_hac_g632
r1041_e82_400bps_hac_v400
r1041_e82_400bps_hac_v410
r1041_e82_400bps_hac_v420
r1041_e82_400bps_hac_v430
r1041_e82_400bps_hac_v500
r1041_e82_400bps_hac_v520
r1041_e82_400bps_hac_v520_with_mv
r1041_e82_400bps_hac_v600
r1041_e82_400bps_hac_v600_with_mv
r1041_e82_400bps_hac_with_mv
r1041_e82_400bps_sup_g615
r1041_e82_400bps_sup_v400
r1041_e82_400bps_sup_v410
r1041_e82_400bps_sup_v420
r1041_e82_400bps_sup_v430
r1041_e82_400bps_sup_v430_bacteria_finetuned
r1041_e82_400bps_sup_v500
r1041_e82_400bps_sup_v520
r1041_e82_400bps_sup_v520_with_mv
r1041_e82_400bps_sup_with_mv
r104_e81_hac_g5015
r104_e81_sup_g5015
r941_prom_hac_g360+g422
r941_prom_sup_g5014
```
